[REVISION 20061202]

[CHANGED] Use Rails 1.2 alias_method_chain.

[CHANGED] Separate modules into individual files.

[REVISION 20061114]

[FIXED] NOT NULL columns with a default not marked as required for update.

[REVISION 20061013]

[NEW] install.rb informs user of missing dependencies.

[REVISION 20061012]

[CHANGED] Only read meta-data for base-classes.

[REVISION 20061011]

[CHANGED] Use include rather than extend in init.rb as this is more general. Plugin code can then determine if it needs to use extend or not.

[REVISION 20061020]

[FIXED] Breaks abstract class inheritance. If classes are named 'AbstractXxx' they will be treated as abstract. This is somewhat of a work-around for the current implementation however I believe it is a sensible choice for now.

[REVISION 20060924]

[FIXED] validates_uniqueness_of causes new records to fail when nullable column is null and there exists another record where the value of the column is also null. NULL values should always be considered unique.

[REVISION 20060915]

[NEW] Multi-column unique indexes are converted to validates_uniqueness_of with scope. The column validated for uniqueness is either the last column not ending in '_id' or simply the last column. This follows the typical composite unique index column ordering where the scoping is specified first but will attempt to find the last non-foreign-key column just-in-case. Eg, both add_index :states, [:country_id, :name], :unique => true and add_index :states, [:name, :country_id], :unique => true would result in <code>validates_uniqueness_of :name, :scope => [:country_id].

[REVISION 20060914]

[CHANGED] Removed unnecessary condition from validates_presence_of for associations.

[REVISION 20060913]

[FIXED] validates_presence_of for associations causes new records to fail.

[REVISION 20060912]
