@@ -7,8 +7,20 @@ module RedHillConsulting::SchemaValidations::ActiveRecord
     module ClassMethods
       def self.extended(base)
         class << base
+          alias_method_chain :allocate, :schema_validations
+          alias_method_chain :new, :schema_validations
           alias_method_chain :belongs_to, :schema_validations
         end
+      end
+
+      def allocate_with_schema_validations
+        load_schema_validations
+        allocate_without_schema_validations
+      end
+
+      def new_with_schema_validations(*args, &block)
+        load_schema_validations
+        new_without_schema_validations(*args, &block)
       end
 
       def belongs_to_with_schema_validations(association_id, options = {})
@@ -25,20 +37,23 @@ module RedHillConsulting::SchemaValidations::ActiveRecord
         validates_uniqueness_of column.name, :scope => column.unique_scope, :allow_nil => true if column.unique
       end
 
-      def inherited(child)
-        super
+      private
 
-        # Don't even bother if: the class is abstract; not a base class; or the table doesn't exist
-        return if child.abstract_class? || !child.base_class? || child.name.blank? || !child.table_exists?
+      @schema_validations_loaded = false
 
-        child.content_columns.reject { |column| column.name =~ /^(((created|updated)_(at|on))|position)$/ }.each do |column|
+      def load_schema_validations
+        # Don't bother if: it's already been loaded; the class is abstract; not a base class; or the table doesn't exist
+        return if @schema_validations_loaded || abstract_class? || !base_class? || name.blank? || !table_exists?
+        @schema_validations_loaded = true
+
+        content_columns.reject { |column| column.name =~ /^(((created|updated)_(at|on))|position)$/ }.each do |column|
           # Data-type validation
           if column.type == :integer
-            child.validates_numericality_of column.name, :allow_nil => true, :only_integer => true
+            validates_numericality_of column.name, :allow_nil => true, :only_integer => true
           elsif column.number?
-            child.validates_numericality_of column.name, :allow_nil => true
+            validates_numericality_of column.name, :allow_nil => true
           elsif column.text? && column.limit
-            child.validates_length_of column.name, :allow_nil => true, :maximum => column.limit
+            validates_length_of column.name, :allow_nil => true, :maximum => column.limit
           end
 
           # NOT NULL constraints
@@ -46,14 +61,14 @@ module RedHillConsulting::SchemaValidations::ActiveRecord
             # Work-around for a "feature" of the way validates_presence_of handles boolean fields
             # See http://dev.rubyonrails.org/ticket/5090 and http://dev.rubyonrails.org/ticket/3334
             if column.type == :boolean
-              child.validates_inclusion_of column.name, :on => column.required_on, :in => [true, false], :message => ActiveRecord::Errors.default_error_messages[:blank]
+              validates_inclusion_of column.name, :on => column.required_on, :in => [true, false], :message => ActiveRecord::Errors.default_error_messages[:blank]
             else
-              child.validates_presence_of column.name, :on => column.required_on
+              validates_presence_of column.name, :on => column.required_on
             end
           end
 
           # UNIQUE constraints
-          child.validates_uniqueness_of column.name, :scope => column.unique_scope, :allow_nil => true if column.unique
+          validates_uniqueness_of column.name, :scope => column.unique_scope, :allow_nil => true if column.unique
         end
       end
     end
